demos/THREAD_COUNTER/make.log
In file included from ../../os/kernel/include/ch.h:127:0,
                 from main.c:9:
main.c: In function 'getThreadStateName':
../../os/kernel/include/chthreads.h:68:10: error: expected ':' or '...' before ',' token
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
          ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:68:10: error: expected expression before ',' token
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
          ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:68:10: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
          ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:68:21: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
                     ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:68:34: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
                                  ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:68:43: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
                                           ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:68:52: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
                                                    ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:68:62: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
                                                              ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:68:74: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
                                                                          ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:69:11: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "WTEXIT", "WTOREVT", "WTANDEVT", "SNDMSGQ", "SNDMSG", "WTMSG", "WTQUEUE", \
           ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:69:22: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "WTEXIT", "WTOREVT", "WTANDEVT", "SNDMSGQ", "SNDMSG", "WTMSG", "WTQUEUE", \
                      ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:69:34: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "WTEXIT", "WTOREVT", "WTANDEVT", "SNDMSGQ", "SNDMSG", "WTMSG", "WTQUEUE", \
                                  ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:69:45: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "WTEXIT", "WTOREVT", "WTANDEVT", "SNDMSGQ", "SNDMSG", "WTMSG", "WTQUEUE", \
                                             ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:69:55: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "WTEXIT", "WTOREVT", "WTANDEVT", "SNDMSGQ", "SNDMSG", "WTMSG", "WTQUEUE", \
                                                       ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:69:64: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "WTEXIT", "WTOREVT", "WTANDEVT", "SNDMSGQ", "SNDMSG", "WTMSG", "WTQUEUE", \
                                                                ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:69:75: warning: left-hand operand of comma expression has no effect [-Wunused-value]
   "WTEXIT", "WTOREVT", "WTANDEVT", "SNDMSGQ", "SNDMSG", "WTMSG", "WTQUEUE", \
                                                                           ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
../../os/kernel/include/chthreads.h:68:10: warning: statement with no effect [-Wunused-value]
   "READY", "CURRENT", "SUSPENDED", "WTSEM", "WTMTX", "WTCOND", "SLEEPING",  \
          ^
main.c:224:7: note: in expansion of macro 'THD_STATE_NAMES'
  case THD_STATE_NAMES:
       ^
make: *** [build/obj/main.o] Error 1
